<resources>
    <string name="app_name">Just Java</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="total">Total</string>
    <string name="order">Order</string>
    <string name="name">Name</string>
    <string name="thank_you">Thank you!</string>
</resources>
